CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745, STR #942, STR #931)
	- Compilation could fail if a previous installation of
	  FLTK was in the same (non-standard) directory as an
	  image library (STR #926)
	- Fixed OSX compilation problems with non-HFS filesystems
	  (STR #972)
	- Problems with CMake on MinGW have been solved, thanks
	  to Mr. "fltk.x0", who submitted the patch. (STR #863)
	- Fixed memory leak in Fl_Check_Browser reported by
	  "miguel2i". (STR #967)
	- Fl_File_Input could draw in the wrong window (STR #958)
	- WIN32: Internal WM_PAINT message now ignored (STR #831)
	- Added Windows support for Fl_Window::xclass() (STR #848)
	- Floating point input field allows characters from
	  current locale (STR #903)
	- Fixed integration of Fl_Input_Choice into FLUID (STR
	  #879)
	- New windows touching the right screen border would be 
	  positioned all the way to the left (STR #898)
	- Made pie drawing size for WIN32 and OS X the same as
	  X11 (STR #905)
	- Fixed OS X issue with OpenGL windows inside of Tabs
	  (STR #602)
	- FLUID Code Editor would occasionally not draw the last
	  character in the buffer (STR #798)
	- FLUID Declaration private flag fixed (STR #799)
	- FLUID overlay now shows a seperate bounding box of
	  selected items with correct handles and a dotted
	  boundig box for all  labels (STR #790)
	- Fixed left overhang of large chracters in Fl_Input_
	  (STR #941)
	- Fixed button resizing in File Chooser (STR #884)
	- Fixed FLUID redraw issue (STR #912)
	- Added 32bit BMP Image file format support (STR #918)
	- Value Sliders would not receive focus when clicked on
	  (STR #911)
	- Added redraw of some widgets to show focus change (STR
	  #910)
	- Fl::set_font would not clear 'pretty' name (STR #902)
	- Fixed unescaped '@' in fonts demo (STR #867)
	- FLUID should not open the Display connection anymore if
	  creating code only (STR #904)